2007-10-28 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/stdarg.h: fixed bug in va_start macro for --xstack
	* src/hc08/gen.c (aopForRemat): aop->aopu.aop_immd.from_cast_remat not set,
	  aop->aopu.aop_immd.aop_immd2 not filled with (generic) pointer type
	* src/SDCCicode.c (geniCodeCast): fixed bug 880197
	* support/regression/tests/bug-880197.c: new, added

2007-10-28 Borut Razem <borut.razem AT siol.net>

	* support/regression/Makefile.in,
	  support/regression/ports/mcs51-large/spec.mk,
	  support/regression/ports/mcs51-xstack-auto/spec.mk,
	  support/regression/ports/mcs51-stack-auto/spec.mk,
	  support/regression/ports/mcs51-medium/spec.mk,
	  support/regression/ports/mcs51-common/spec.mk,
	  support/regression/ports/mcs51-common/*,
	  support/regression/ports/mcs51-small/*:
	  mcs51 renamed to mcs51-common, created mcs51-small
	* src/SDCCsymt.c: fixed bug #1805702 - order of extern matters
	* support/regression/tests/bug-1805702.c: added regtest for bug
	  #1805702

2007-10-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/peeph.def: moved rules 257.x to 253.x and re-enabled 253.b,
	  added new rules 265 - 270
	* support/regression/tests/bug1721024.c:new, added
	* support/regression/Makefile.in: renamed test-mcs51 to test-mcs51-small,
	  introduced new test-mcs51 to run all mcs51 tests

2007-10-25 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/bug1816470.c: new, added

2007-10-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCast.c (resultTypePropagate): do propagate for LEFT_OP, do not
	  propagate for *,+,- with float, fixed bug 1816470
	  (decorateType): cast to resultTypeProp instead of resultType

2007-10-19 Borut Razem <borut.razem AT siol.net>

	* src/pic16/glue.c: fixed bug #983491 - "Merge duplicate strings
	  function is ineffective" for pic16 tareget
	* support/scripts/listerr.c: corrected include path
	* device/lib/_itoa.c: fixed bug #1806402 - _itoa and _uitoa leak to